--- a/jenkins/Dockerfile
+++ b/jenkins/Dockerfile
@@ -3,5 +3,4 @@ user root
 RUN apt-get update \
 && apt-get install -y --force-yes --no-install-recommends software-properties-common \
 && apt-get install -y --force-yes --no-install-recommends ansible
-
-
+&& ssh-keygen -t rsa -P '' -f ~/.ssh/id_rsa
