install vim to jenkins

--- a/jenkins/Dockerfile
+++ b/jenkins/Dockerfile
@@ -2,6 +2,7 @@ From jenkins
 user root
 ADD get-pip.py /
 RUN apt-get update \
+&& apt-get install -y --force-yes --no-install-recommends vim \
 && apt-get install -y --force-yes --no-install-recommends software-properties-common \
 && apt-get install -y --force-yes --no-install-recommends ansible \
 && ssh-keygen -t rsa -P '' -f ~/.ssh/id_rsa \
